--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
@@ -38,7 +38,7 @@
             display: flex;
             flex-direction: row;
             width: 100%;
-            justify-content: center;
+            justify-content: space-between;
         }
 
         .description{
