--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
@@ -40,9 +40,8 @@
             display: flex;
             width: 100%;
             justify-content: space-between;
-            flex-flow: column;
-            align-items: center;
-            text-align: center;
+            flex-flow: row-reverse;
+            align-items: flex-start;
         }
 
         .description_text{
@@ -115,6 +114,7 @@
                 max-width: 15em;
                 max-height: 15em;
                 margin: 1em 0.5em ;
+                box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
             }
 
             .update_logo_button{
