--- a/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/starfsmenn/staff/staff_default-style.css
@@ -78,6 +78,12 @@
                     margin-right: 1em;
                 }
 
+                .save_text_button:hover, .save_text_button:active{
+                    color: white;
+                    background:#333;
+                    cursor: pointer;
+                }
+
                 .remove_button{
                     position: relative;
                     left: 2.5%;
