--- a/Lokaverkefni_2019/vefsiða/timaskra/staff_page/staff_page-style.css
+++ b/Lokaverkefni_2019/vefsiða/timaskra/staff_page/staff_page-style.css
@@ -35,50 +35,55 @@
         max-width: 48em;
         width: 100%;
         height: 80%;
-        font-size: calc(1em + 1vw)
     }
 
         .main::-webkit-scrollbar{
             display: none;
         }
-
-        .fault_message{
-            color: grey;
+        
+        .staff_info{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
+            .staff_logo{
+                max-width: 15em;
+                max-height: 15em;
+                margin: 1em 0.5em ;
+                box-shadow: 7px 7px 7px -6px rgba(0,0,0,0.75);
+                border-radius: 15%;
+            }
 
-        .staff_id_in{
-            width: 50%;
-            text-align: center;
-            box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
-        }
+            .staff_name{
+                margin-bottom: 1vh;
+            }
 
         .button_div{
             display: flex;
             flex-direction: row;
-            justify-content: center;
-            background: white;
-            width: 100%;
+            justify-content: space-between;
+            align-items: center;
+            width: 65%;
+            margin: 18% 0 10% 0;
         }
 
-            .login_button{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 3% 6%;
-                margin: 1em; 
-                box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
-                border-radius: 10%;
-                font-weight: bold; 
-                color: white;
-                background: #14489f;
-                white-space: nowrap;
-            }
+        .button_div button{
+            width: 45%;
+            height: 350%;
+            font-weight: bold; 
+            color: white;
+            background: #14489f;
+            white-space: nowrap;
+            box-shadow: 5px 5px 5px -6px rgba(0,0,0,0.75);
+            border-radius: 10%;
+        }
 
-            .login_button:hover, .login_button:active{
-                color: white;
-                background:#333;
-                cursor: pointer;
-            }
+        .button_div button:hover, .button_div button:active{
+            color: white;
+            background:#333;
+            cursor: pointer;
+        }
 
     .navigation{
         display: block;
