--- a/MySite/website/index.css
+++ b/MySite/website/index.css
@@ -1,6 +1,7 @@
 html{
     position: absolute;
     height: 100vh;
+    width: 100vw;
 }
 
 .container{
@@ -40,7 +41,7 @@ html{
                     background: #2A2A2A;
                     color: white;
                     text-align: center;
-                    border-radius: 15px;
+                    border-radius: 1vw;
                     box-shadow: 0.7vw 0.7vw 0px 0px rgba(255, 138, 0, 0.5);
                 }
 
@@ -49,18 +50,27 @@ html{
                     cursor: pointer;
                 }
 
-        .logo{
-            margin: 4vw 6vw 0 0;
-            width: 8%;
-            z-index: 0;
-            border-radius: 3vw;
-            box-shadow: 0.9vw 0.9vw 0px 0px rgba(255, 138, 0, 0.5);
+        .logo_wrapper{
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+            margin: 2vh 6vw 0 0;
+            
+            height: 100%;
         }
-        
-            .logo:hover, .logo:active{
-                box-shadow: 0.9vw 0.9vw 0px 0px rgba(89, 205, 241, 0.5);
-                cursor: pointer;
+
+            .logo{
+                max-width: 100%;
+                max-height: 100%;
+                z-index: 0;
+                border-radius: 20px;
+                box-shadow: 0.9vw 0.9vw 0px 0px rgba(255, 138, 0, 0.5);
             }
+            
+                .logo:hover, .logo:active{
+                    box-shadow: 0.9vw 0.9vw 0px 0px rgba(89, 205, 241, 0.5);
+                    cursor: pointer;
+                }
 
     main{
         height: 100%;
@@ -107,7 +117,7 @@ html{
                     padding: 3vw 3vw;
                     background: #EDEEE9;
                     width: 60%;
-                    border-radius: 20px;
+                    border-radius: 2vw;
                     box-shadow: 1.1vw 1.1vw 0px 0px rgba(255, 138, 0, 0.5);
                 }
 
@@ -120,7 +130,7 @@ html{
                     padding: 3vw 3vw;
                     background: #EDEEE9;
                     width: 60%;
-                    border-radius: 20px;
+                    border-radius: 2vw;
                     box-shadow: 1.1vw 1.1vw 0px 0px rgba(255, 138, 0, 0.5);
                 }
 
