--- a/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
+++ b/Lokaverkefni_2019/vefsiða/bifreiðir/cars/bifreidir_default-style.css
@@ -202,8 +202,22 @@
             }
 
             .maintenance_info >*{
-                flex: 33%;
-                margin-bottom: 1em;    
+                width: 100%;
+                flex: 30%;
+                margin-bottom: 1em;
+                align-self: center;
+            }
+
+            .condition_check{
+                display: none;
+            }
+
+            .tire_div{
+                display: none;
+            }
+
+            .tire_type{
+                margin-left: 20%;
             }
 
             .current_maintenance{
