--- a/MySite/website/index.css
+++ b/MySite/website/index.css
@@ -1,7 +1,6 @@
 html{
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
+    max-height: 100vh;
+    max-width: 100vw;
 }
 
 .container{
@@ -20,6 +19,7 @@ html{
             display: flex;
             justify-content: center;
             align-items: center;
+            width: 75%;
         }
 
             .nav_ul{
@@ -29,19 +29,20 @@ html{
                 flex-direction: row;
                 justify-content: space-between;
                 width: 100%;
-                margin: 0 0 0 20%;
+                margin: 0 0 0 10%;
                 padding: 0;
                 font-size: 1vw;
             }
 
                 .nav_ul > li{
                     white-space: nowrap;
-                    padding: 1.5vh 3vw;
+                    width: 20%;
+                    padding: 1.5vh 0vw;
                     margin: 0 2em;
                     background: #2A2A2A;
                     color: white;
                     text-align: center;
-                    border-radius: 1vw;
+                    border-radius: 15px;
                     box-shadow: 0.7vw 0.7vw 0px 0px rgba(255, 138, 0, 0.5);
                 }
 
@@ -54,14 +55,14 @@ html{
             display: flex;
             justify-content: flex-end;
             align-items: flex-end;
-            margin: 2vh 6vw 0 0;
-            
+            margin: 7% 6% 0 0%;
             height: 100%;
+            width: 6%;
         }
 
             .logo{
-                max-width: 100%;
-                max-height: 100%;
+                max-width: 150%;
+                max-height: 150%;
                 z-index: 0;
                 border-radius: 20px;
                 box-shadow: 0.9vw 0.9vw 0px 0px rgba(255, 138, 0, 0.5);
