--- a/MySite/website/index.css
+++ b/MySite/website/index.css
@@ -1,160 +1,13 @@
-html{
-    max-height: 100vh;
-    max-width: 100vw;
+main{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #2A2A2A;
 }
 
-.container{
-    font-family: 'Montserrat', sans-serif;
-}
-
-    header{
-        display: flex;
-        align-items: center;
-        height: 10%;
-        background: #EDEEE9;
-        justify-content: space-between;
+    .me_1{
+        max-width: 20%;
+        border-radius: 2vw;
     }
-
-        nav{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 75%;
-        }
-
-            .nav_ul{
-                list-style-type: none;
-                display: flex;
-                flex: 0 1 auto;
-                flex-direction: row;
-                justify-content: space-between;
-                width: 100%;
-                margin: 0 0 0 10%;
-                padding: 0;
-                font-size: 1vw;
-            }
-
-                .nav_ul > li{
-                    white-space: nowrap;
-                    width: 20%;
-                    padding: 1.5vh 0vw;
-                    margin: 0 2em;
-                    background: #2A2A2A;
-                    color: white;
-                    text-align: center;
-                    border-radius: 15px;
-                    box-shadow: 0.7vw 0.7vw 0px 0px rgba(255, 138, 0, 0.5);
-                }
-
-                .nav_ul > li:hover, .nav_ul > li:active{
-                    box-shadow: 0.7vw 0.7vw 0px 0px rgba(89, 205, 241, 0.5);
-                    cursor: pointer;
-                }
-
-        .logo_wrapper{
-            display: flex;
-            justify-content: flex-end;
-            align-items: flex-end;
-            margin: 7% 6% 0 0%;
-            height: 100%;
-            width: 6%;
-        }
-
-            .logo{
-                max-width: 150%;
-                max-height: 150%;
-                z-index: 0;
-                border-radius: 20px;
-                box-shadow: 0.9vw 0.9vw 0px 0px rgba(255, 138, 0, 0.5);
-            }
-            
-                .logo:hover, .logo:active{
-                    box-shadow: 0.9vw 0.9vw 0px 0px rgba(89, 205, 241, 0.5);
-                    cursor: pointer;
-                }
-
-    main{
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        background: #2A2A2A;
-    }
-
-        .row_1{
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-        }
-
-            .img_wrapper{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 42vw;
-                height: 29vw;
-                margin: 5vw 0 0 5%;
-                background: #EDEEE9;
-                border-radius: 5vw;
-                box-shadow: 2vw 2vw 0px 0px rgba(255, 138, 0, 0.5);
-            }
-
-            .img_app{
-                max-height: 90%;
-                border-radius: 5vw;
-            }
-
-            .text_container_1{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                font-size: 1vw;
-                font-weight: bold;
-                margin: 8vw 5vw 0 0;
-            }
-
-                .textbox_title{
-                    text-align: center;
-                    margin: 0 0 0 2vw;
-                    padding: 5% 5%;
-                    background: #EDEEE9;
-                    width: 30%;
-                    border-radius: 2vw;
-                    box-shadow: 1.1vw 1.1vw 0px 0px rgba(255, 138, 0, 0.5);
-                }
-
-                    .textbox_1:hover, .textbox_1:active{
-                        box-shadow: 1.1vw 1.1vw 0px 0px rgba(89, 205, 241, 0.5);
-                    }
-
-                .textbox_text{
-                    margin: 10% 0 0 2vw;
-                    padding: 3vw 3vw;
-                    background: #EDEEE9;
-                    width: 60%;
-                    border-radius: 2vw;
-                    box-shadow: 1.1vw 1.1vw 0px 0px rgba(255, 138, 0, 0.5);
-                }
-
-                    .textbox_2:hover, .textbox_2:active{
-                        box-shadow: 1.1vw 1.1vw 0px 0px rgba(89, 205, 241, 0.5);
-                    }
-
-            .img_wrapper_2{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 38vw;
-                height: 27vw;
-                margin: 5vw 5% 0 ;
-                background: #EDEEE9;
-                border-radius: 5vw;
-                box-shadow: 2vw 2vw 0px 0px rgba(255, 138, 0, 0.5);
-            }
-
-            .img_laptop{
-                max-width: 48vw;
-                max-height: 28vw;
-                height: 23vw;
-                border-radius: 5vw;
-            }
