--- a/MySite/website/config/nav.css
+++ b/MySite/website/config/nav.css
@@ -1,3 +1,79 @@
+html{
+    max-height: 100vh;
+    max-width: 100vw;
+}
+
+.container{
+    font-family: 'Montserrat', sans-serif;
+}
+
+    header{
+        display: flex;
+        align-items: center;
+        height: 10%;
+        background: #EDEEE9;
+        justify-content: space-between;
+    }
+
+        nav{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 75%;
+        }
+
+            .nav_ul{
+                list-style-type: none;
+                display: flex;
+                flex: 0 1 auto;
+                flex-direction: row;
+                justify-content: space-between;
+                width: 100%;
+                margin: 0 0 0 10%;
+                padding: 0;
+                font-size: 1vw;
+            }
+
+                .nav_ul > li{
+                    white-space: nowrap;
+                    width: 20%;
+                    padding: 1.5vh 0vw;
+                    margin: 0 2em;
+                    background: #2A2A2A;
+                    color: white;
+                    text-align: center;
+                    border-radius: 15px;
+                    box-shadow: 0.7vw 0.7vw 0px 0px rgba(255, 138, 0, 0.5);
+                }
+
+                .nav_ul > li:hover, .nav_ul > li:active{
+                    box-shadow: 0.7vw 0.7vw 0px 0px rgba(89, 205, 241, 0.5);
+                    cursor: pointer;
+                    color: rgba(89, 205, 241, 0.836);
+                }
+
+        .logo_wrapper{
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+            margin: 7% 6% 0 0%;
+            height: 100%;
+            width: 6%;
+        }
+
+            .logo{
+                max-width: 150%;
+                max-height: 150%;
+                z-index: 0;
+                border-radius: 20px;
+                box-shadow: 0.9vw 0.9vw 0px 0px rgba(255, 138, 0, 0.5);
+            }
+            
+                .logo:hover, .logo:active{
+                    box-shadow: 0.9vw 0.9vw 0px 0px rgba(89, 205, 241, 0.5);
+                    cursor: pointer;
+                }
+
 .m_navigation{
     display: none;
 }
