--- a/MySite/website/projects/projects.css
+++ b/MySite/website/projects/projects.css
@@ -1,102 +1,50 @@
-html{
-    max-height: 100vh;
-    max-width: 100vw;
-}
-
-.container{
-    font-family: 'Montserrat', sans-serif;
-}
-
-    header{
-        display: flex;
-        align-items: center;
-        height: 10%;
-        background: #EDEEE9;
-        justify-content: space-between;
-    }
-
-        nav{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 75%;
-        }
-
-            .nav_ul{
-                list-style-type: none;
-                display: flex;
-                flex: 0 1 auto;
-                flex-direction: row;
-                justify-content: space-between;
-                width: 100%;
-                margin: 0 0 0 10%;
-                padding: 0;
-                font-size: 1vw;
-            }
-
-                .nav_ul > li{
-                    white-space: nowrap;
-                    width: 20%;
-                    padding: 1.5vh 0vw;
-                    margin: 0 2em;
-                    background: #2A2A2A;
-                    color: white;
-                    text-align: center;
-                    border-radius: 15px;
-                    box-shadow: 0.7vw 0.7vw 0px 0px rgba(255, 138, 0, 0.5);
-                }
-
-                .nav_ul > li:hover, .nav_ul > li:active{
-                    box-shadow: 0.7vw 0.7vw 0px 0px rgba(89, 205, 241, 0.5);
-                    cursor: pointer;
-                }
-
-        .logo_wrapper{
-            display: flex;
-            justify-content: flex-end;
-            align-items: flex-end;
-            margin: 7% 6% 0 0%;
-            height: 100%;
-            width: 6%;
-        }
-
-            .logo{
-                max-width: 150%;
-                max-height: 150%;
-                z-index: 0;
-                border-radius: 20px;
-                box-shadow: 0.9vw 0.9vw 0px 0px rgba(255, 138, 0, 0.5);
-            }
-            
-                .logo:hover, .logo:active{
-                    box-shadow: 0.9vw 0.9vw 0px 0px rgba(89, 205, 241, 0.5);
-                    cursor: pointer;
-                }
-
     main{
-        height: 100%;
+        height: 90%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         background: #2A2A2A;
         color: white;
+        font-size: calc(1em + 1vw);
     }
 
-        .project_list{
-            list-style-type: none;
-            text-decoration: underline;
-            width: 50%;
-            padding: 0; 
-            text-align: center;
+        .list_div{
+            display: flex;
+            justify-content: center;
+            width: 25%;
+            height: 60vh;
+            border-style: solid;
+            border-width: 2px;
+            border-color: rgba(255, 138, 0, 0.5);
+            border-radius: 20px;
+            box-shadow: 0.9vw 0.9vw 0px 0px rgba(255, 138, 0, 0.5);
+            /*color: rgba(255, 138, 0, 0.836);*/
         }
 
-            .project_list li{
-                padding: 3%;
+            .list_div:hover{
+                box-shadow: 0.9vw 0.9vw 0px 0px rgba(89, 205, 241, 0.5);
+                border-color: rgba(89, 205, 241, 0.5);
             }
 
-            .project_list li:hover{
-                font-weight: bold;
-                color: rgba(255, 138, 0, 0.5);
-                cursor: pointer;
+            .project_list{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                list-style-type: none;
+                text-decoration: underline;
+                width: 100%;
+                padding: 0; 
+                text-align: center;
             }
+
+                .project_list li{
+                    padding: 3%;
+                    width: fit-content;
+                }
+
+                .project_list li:hover{
+                    font-weight: bold;
+                    color: rgba(89, 205, 241, 0.5);                    
+                    cursor: pointer;
+                }
