--- a/MySite/website/cars/cars.css
+++ b/MySite/website/cars/cars.css
@@ -48,7 +48,7 @@ main{
                 box-shadow: 1.1vw 1.1vw 0px 0px rgba(255, 138, 0, 0.5);
             }
 
-                .textbox_1:hover, .textbox_1:active{
+                .textbox_title:hover, .textbox_title:active{
                     box-shadow: 1.1vw 1.1vw 0px 0px rgba(89, 205, 241, 0.5);
                 }
 
@@ -61,7 +61,50 @@ main{
                 box-shadow: 1.1vw 1.1vw 0px 0px rgba(255, 138, 0, 0.5);
             }
 
-                .textbox_2:hover, .textbox_2:active{
+                .textbox_text:hover, .textbox_text:active{
+                    box-shadow: 1.1vw 1.1vw 0px 0px rgba(89, 205, 241, 0.5);
+                }
+
+    .row_2{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+        .text_container_2{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 1vw;
+            font-weight: bold;
+            margin: 10% 0 0 0;
+        }
+
+            .textbox_title_2{
+                text-align: center;
+                margin: 0 0 0 0;
+                padding: 5% 5%;
+                background: #EDEEE9;
+                width: 30%;
+                border-radius: 2vw;
+                box-shadow: 1.1vw 1.1vw 0px 0px rgba(255, 138, 0, 0.5);
+            }
+
+                .textbox_title_2:hover, .textbox_title_2:active{
+                    box-shadow: 1.1vw 1.1vw 0px 0px rgba(89, 205, 241, 0.5);
+                }
+
+            .textbox_text_2{
+                margin: 5% 0 0 0;
+                padding: 3vw 3vw;
+                background: #EDEEE9;
+                width: 60%;
+                border-radius: 2vw;
+                box-shadow: 1.1vw 1.1vw 0px 0px rgba(255, 138, 0, 0.5);
+            }
+
+                .textbox_text_2:hover, .textbox_text_2:active{
                     box-shadow: 1.1vw 1.1vw 0px 0px rgba(89, 205, 241, 0.5);
                 }
 
@@ -69,17 +112,15 @@ main{
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 38vw;
-            height: 27vw;
-            margin: 5vw 5% 0 ;
+            width: 42vw;
+            height: 29vw;
+            margin: 15% 10% 8% 0;
             background: #EDEEE9;
             border-radius: 5vw;
-            box-shadow: 2vw 2vw 0px 0px rgba(255, 138, 0, 0.5);
+            box-shadow: 2vw 2vw 0px 0px rgba(255, 138, 0, 0.5);       
         }
 
-        .img_laptop{
-            max-width: 48vw;
-            max-height: 28vw;
-            height: 23vw;
-            border-radius: 5vw;
-        }
+            .img_lancer{
+                max-height: 100%;
+                border-radius: 5vw;
+            }
