--- a/tar.is/website/config/nav/nav.css
+++ b/tar.is/website/config/nav/nav.css
@@ -12,6 +12,11 @@
     .nav li{
 
     }
+        .nav li:hover{
+            transform: scale(1.1);
+            transition: 0.2s;
+            z-index: 2;
+        }
 
     .nav a{
         text-decoration: none;
