--- a/tar.is/website/index.css
+++ b/tar.is/website/index.css
@@ -50,6 +50,11 @@ html{
                     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                     background: white;
                 }
+
+                .logo img:hover{
+                    transform: rotate(360deg);
+                    transition: 0.3s;
+                }
         
         .main{
             height: 90%;
