--- a/tar.is/website/hugbunadur/hugbunadur.css
+++ b/tar.is/website/hugbunadur/hugbunadur.css
@@ -9,13 +9,13 @@ html{
 }
 
     body{
-        height: 100%;
+        height: 100vh;
         width: 100vw;
         background: rgb(2,0,36);
         background: linear-gradient(300deg, rgba(2,0,36,1) 1%, rgba(29,31,74,1) 13%, rgba(42,45,91,1) 43%, rgba(61,59,115,1) 48%, rgba(63,165,213,1) 100%);
         overflow: scroll;
     }
-
+    
         header{
             height: 15vh;
             width: 100vw;
@@ -49,7 +49,13 @@ html{
                 height: 37px;
                 margin-left: 10%;
             }
-    
+
+        .inProgress{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 85vh;
+        }
         
         .main{
             display: flex;
