--- a/tar.is/website/index.css
+++ b/tar.is/website/index.css
@@ -6,51 +6,18 @@ html{
     max-width: 100vw;
     font-family: Montserrat;
     font-style: normal;
+    background: rgb(2,0,36);
+    background: linear-gradient(300deg, rgba(2,0,36,1) 1%, rgba(29,31,74,1) 13%, rgba(42,45,91,1) 43%, rgba(61,59,115,1) 48%, rgba(63,165,213,1) 100%);
+
 }
 
     body{
         height: 100%;
         width: 100vw;
-        background: rgb(2,0,36);
-        background: linear-gradient(300deg, rgba(2,0,36,1) 1%, rgba(29,31,74,1) 13%, rgba(42,45,91,1) 43%, rgba(61,59,115,1) 48%, rgba(63,165,213,1) 100%);
         overflow: scroll;
+        overflow-x: hidden;
     }
 
-        header{
-            height: 15vh;
-            width: 100vw;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            border-style: solid;
-            border-top: none;
-            border-right: none;
-            border-left: none;
-            border-right: none;
-            border-width: 0px;
-            border-color: white;
-        }
-
-            .menuIcon{
-                width: 35px;
-                height: 30px;
-                margin-right: 10%;
-                z-index: 1;
-            }
-
-            .logo{
-                width: 133px;
-                height: 133px;
-            }
-
-            .searchIcon{
-                width: 37px;
-                height: 37px;
-                margin-left: 10%;
-            }
-    
-        
         .main{
             display: flex;
             flex-direction: column;
@@ -115,7 +82,7 @@ html{
                         margin: 5% 0 0 0 ;
                     }
 
-                    .s2Info h3{
+                    .s2Text{
                         font-size: 20px;
                         width: 80%;
                         font-weight: 600;
@@ -159,7 +126,7 @@ html{
                         margin: 5% 0 0 0 ;
                     }
 
-                    .s3Info h3{
+                    .s3Text{
                         font-size: 20px;
                         width: 80%;
                         font-weight: 600;
@@ -182,3 +149,132 @@ html{
         .footer{
             
         }
+
+
+/* ----------MOBILE / TABLET---------- */
+
+@media only screen and (min-width: 768px){
+    .main{
+
+    }
+}
+
+/* ----------LARGER TABLET / DESKTOP---------- */
+@media only screen and (min-width: 1024px){
+    body{
+        width: 80vw;
+    }
+
+        .main{
+        }
+
+            .section1{
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+                
+                padding: 4% 0% 4% 0;
+            }
+
+                .s1Iphone{
+                    order: 1;
+                    width: 320px;
+
+                    padding: 0% 5% 0% 5%;
+                }
+
+                .s1Info{
+                    order: 0;
+                    height: 100%;
+                    width: 60%;
+                    justify-content: center;
+                    align-items: flex-start;
+                    text-align: start;
+                    margin-bottom: 15%;
+                }
+
+                    .s1Info h1{
+                        font-size: 60px;
+                    }
+                    
+                    .s1Info h5{
+                        font-size: 20px;
+                    }
+
+            .section2{
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-start;
+                height: 100%;
+                
+                padding: 0% 0% 4% 10%;
+            }
+
+                .s2Devices{
+                    order: 0;
+                    width: 500px;
+
+                    padding: 0% 0% 0% 0%;
+                }
+
+                .s2Info{
+                    order: 1;
+                    height: 100%;
+                    width: 60%;
+                    justify-content: center;
+                    align-items: flex-start;
+                    text-align: start;
+                    margin: 0 0 0 0;
+                }
+
+                    .s2Info h2{
+                        font-size: 60px;
+                    }
+                    
+                    .s2Text{
+                        font-size: 20px;
+                    }
+
+                    .s2Button{
+                        margin: 8% 0 0%;
+                    }
+            
+            .section3{
+                flex-direction: column;
+                justify-content: center;
+                align-items: flex-end;
+                height: 100%;
+                
+                padding: 0% 10% 4% 0%;
+            }
+
+                .s3Code{
+                    order: 0;
+                    width: 500px;
+
+                    padding: 0% 0% 0% 0%;
+                }
+
+                .s3Info{
+                    order: 1;
+                    height: 100%;
+                    width: 60%;
+                    justify-content: center;
+                    align-items: flex-end;
+                    text-align: end;
+                    margin: 0 0 0 0;
+                }
+
+                    .s3Info h2{
+                        font-size: 60px;
+                    }
+                    
+                    .s3Text{
+                        font-size: 20px;
+                    }
+
+                    .s3Button{
+                        margin: 8% 0 0%;
+                    }
+}
