--- a/tar.is/website/umOkkur/umOkkur.css
+++ b/tar.is/website/umOkkur/umOkkur.css
@@ -95,7 +95,8 @@ html{
                         font-size: 12px;
                         width: 80%;
                         font-weight: 600;
-                        margin: 5% 0 0 0 ;                    }
+                        margin: 5% 0 0 0 ;
+                    }
             
             .section2{
                 display: flex;
@@ -188,3 +189,17 @@ html{
         .footer{
             
         }
+
+/* ----------MOBILE / TABLET---------- */
+@media only screen and (min-width: 768px){
+    .main{
+
+    }
+}
+
+/* ----------LARGER TABLET / DESKTOP---------- */
+@media only screen and (min-width: 1024px){
+    body{
+        width: 80vw;
+    }
+}
