--- a/tar.is/website/config/nav/nav.css
+++ b/tar.is/website/config/nav/nav.css
@@ -5,11 +5,13 @@
     justify-content: center;
     height: 100vh;
     width: 100vw;
+    
     background: rgba(2,0,36,1);
     position: fixed;
     left: 0;
     top: 0;
     z-index: 0;
+    font-weight: 600;
     
     
     clip-path: ellipse(0px 0px at 0% 50%);
