--- a/tar.is/website/config/normalize.css
+++ b/tar.is/website/config/normalize.css
@@ -22,7 +22,9 @@ html {
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
+
 
 /**
  * Correct the font size and margin on `h1` elements within `section` and
