--- a/tar.is/website/index.css
+++ b/tar.is/website/index.css
@@ -8,13 +8,12 @@ html{
     font-style: normal;
     background: rgb(2,0,36);
     background: linear-gradient(300deg, rgba(2,0,36,1) 1%, rgba(29,31,74,1) 13%, rgba(42,45,91,1) 43%, rgba(61,59,115,1) 48%, rgba(63,165,213,1) 100%);
-
 }
 
     body{
         height: 100%;
         width: 100vw;
-        overflow: scroll;
+        overflow-y: scroll;
         overflow-x: hidden;
     }
 
@@ -56,7 +55,8 @@ html{
                         font-size: 12px;
                         width: 80%;
                         font-weight: 600;
-                        margin: 5% 0 0 0 ;                    }
+                        margin: 5% 0 0 0 ;
+                    }
             
             .section2{
                 display: flex;
@@ -66,6 +66,10 @@ html{
 
                 text-align: center;
             }
+
+                .s2Devices{
+                    width: 300px;
+                }
 
                 .s2Info{
                     display: flex;
@@ -110,6 +114,11 @@ html{
 
                 text-align: center;
             }
+
+                .s3Code{
+                    width: 330px;
+                    border-radius: 25px;
+                }
 
                 .s3Info{
                     display: flex;
@@ -177,11 +186,22 @@ html{
                 padding: 4% 0% 4% 0;
             }
 
+                .section1:hover .s1Iphone{
+                    transform: scale(1.05);
+                    transition:all 0.3s ease-out;
+                }
+
+                .section1:hover .s1Info{
+                    transform: scale(1.05);
+                    transition:all 0.6s ease-out;
+                }
+
                 .s1Iphone{
                     order: 1;
                     width: 320px;
 
                     padding: 0% 5% 0% 5%;
+                    transition:all 0.6s ease-out;
                 }
 
                 .s1Info{
@@ -192,6 +212,7 @@ html{
                     align-items: flex-start;
                     text-align: start;
                     margin-bottom: 15%;
+                    transition:all 1s ease-out;
                 }
 
                     .s1Info h1{
@@ -211,11 +232,22 @@ html{
                 padding: 0% 0% 4% 10%;
             }
 
+                .section2:hover .s2Devices{
+                    transform: scale(1.05);
+                    transition:all 0.3s ease-out;
+                }
+
+                .section2:hover .s2Info{
+                    transform: scale(1.05);
+                    transition:all 0.6s ease-out;
+                }
+
                 .s2Devices{
                     order: 0;
                     width: 500px;
 
                     padding: 0% 0% 0% 0%;
+                    transition:all 0.3s ease-out;
                 }
 
                 .s2Info{
@@ -226,6 +258,7 @@ html{
                     align-items: flex-start;
                     text-align: start;
                     margin: 0 0 0 0;
+                    transition:all 0.6s ease-out;
                 }
 
                     .s2Info h2{
@@ -249,11 +282,22 @@ html{
                 padding: 0% 10% 4% 0%;
             }
 
+                .section3:hover .s3Code{
+                    transform: scale(1.05);
+                    transition:all 0.3s ease-out;
+                }
+
+                .section3:hover .s3Info{
+                    transform: scale(1.05);
+                    transition:all 0.6s ease-out;
+                }
+
                 .s3Code{
                     order: 0;
                     width: 500px;
 
                     padding: 0% 0% 0% 0%;
+                    transition:all 0.3s ease-out;
                 }
 
                 .s3Info{
@@ -264,6 +308,7 @@ html{
                     align-items: flex-end;
                     text-align: end;
                     margin: 0 0 0 0;
+                    transition:all 0.6s ease-out;
                 }
 
                     .s3Info h2{
@@ -277,4 +322,5 @@ html{
                     .s3Button{
                         margin: 8% 0 0%;
                     }
+
 }
