--- a/tar.is/website/config/nav/nav.css
+++ b/tar.is/website/config/nav/nav.css
@@ -66,5 +66,10 @@
         .menuOverlay a{
             font-size: 25px;
             font-weight: 600;
+            transition:all 0.1s ease-out;
+        }
+
+        .menuOverlay a:hover{
+            border-bottom: solid;
         }
 }
