--- a/tar.is/website/config/footer/footer.css
+++ b/tar.is/website/config/footer/footer.css
@@ -21,6 +21,7 @@ footer{
             margin: 0;
             border-bottom: solid;
             border-width: 2px;
+            font-size: 20px;
         }
 
         .footerDetail{
@@ -31,6 +32,7 @@ footer{
 
             .footerDetail h3{
                 margin: 8px 0 0px 0;
+                font-size: 15px;
             }
 
             .emailPhone{
@@ -49,6 +51,10 @@ footer{
                 align-items: flex-start;
                 padding: 0 0 0 10px;
             }
+        
+        .copyright{
+            font-size: 12px;
+        }
 
 
 /* ----------LARGER TABLET / DESKTOP---------- */
