--- a/tar.is/website/hugbunadur/hugbunadur.css
+++ b/tar.is/website/hugbunadur/hugbunadur.css
@@ -15,47 +15,6 @@ html{
         background: linear-gradient(300deg, rgba(2,0,36,1) 1%, rgba(29,31,74,1) 13%, rgba(42,45,91,1) 43%, rgba(61,59,115,1) 48%, rgba(63,165,213,1) 100%);
         overflow: scroll;
     }
-    
-        header{
-            height: 15vh;
-            width: 100vw;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            border-style: solid;
-            border-top: none;
-            border-right: none;
-            border-left: none;
-            border-right: none;
-            border-width: 0px;
-            border-color: white;
-        }
-
-            .menuIcon{
-                width: 35px;
-                height: 30px;
-                margin-right: 10%;
-                z-index: 1;
-            }
-
-            .logo{
-                width: 133px;
-                height: 133px;
-            }
-
-            .searchIcon{
-                width: 37px;
-                height: 37px;
-                margin-left: 10%;
-            }
-
-        .inProgress{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 85vh;
-        }
         
         .main{
             display: flex;
@@ -71,18 +30,20 @@ html{
                 align-items: center;
                 height: 85vh;
 
-                padding-top: 2.5em;
                 text-align: center;
             }
 
-                .s1Iphone{
-                    width: 190px;
+                .s1Devices{
+                    width: 300px;
+                    padding-left: 50px;
                 }
                 
                 .s1Info{
                     display: flex;
                     flex-direction: column;
                     align-items: center;
+
+                    margin-bottom: 50px;
                 }
 
                     .s1Info h1{
