--- a/tar.is/website/hafaSamband/hafaSamband.css
+++ b/tar.is/website/hafaSamband/hafaSamband.css
@@ -72,14 +72,16 @@ html{
                     width: 100%;
                     border-radius: 5px;
                     font-size: 20px;
+                    margin: 10px 0;
                     padding: 5px;
                 }
 
                 .info div .textIn{
                     height: 90px;
                     width: 100%;
+                    margin: 10px 0;
                     padding: 5px;
-                    border-radius: 10px;
+                    border-radius: 5px;
                     resize: none;
                 }
 
@@ -149,7 +151,7 @@ html{
                 width: 100%;
                 font-size: 20px;
                 padding: 5px;
-                text-align: center;
+                text-align: start;
             }
 
             .info div .textIn{
